# LEMAConsole/routes/nodeRoutes.js
@@ -13,6 +13,9 @@ module.exports = function (app) {
     app.route('/api/node/list')
         .get(auth.isLoggedIn, node.list_nodes);
 
+    app.route('/api/node/update/status')
+        .put(auth.isLoggedIn, node.update_status);
+
     app.route('/api/node/scan_range')
         .get(auth.isLoggedIn, node.get_scanrange)
         .post(auth.isLoggedIn, node.update_scanrange)
